# AinerAtlasApp

./: .env.development  .env.example  .env.production  .gitignore  .hermes_timeline.md  AGENT_DEPLOY_PROMPT.md  AinerSpeak_AI_Expression_OS_Design.md  AinerSpeak_AI_Expression_OS_Design_v1.1_FULL.md  AinerSpeak_AI_Expression_OS_Enterprise_Blueprint_v1.2.md  DEPLOY.md  GAME_REQUIREMENTS_TASKS.md  README.md  SOCIAL_LOGIC_LITE_CODE_SPEC.md  SOCIAL_LOGIC_LITE_UI_SPEC.md  TASKS.md  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml  fix_styles.py  package-lock.json  package.json  patch_llm.py  rewrite_css.py
apps/api/: Dockerfile  alembic.ini  pyproject.toml  test_games.py
apps/api/ainerspeak_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/alembic/: env.py
apps/api/app/: __init__.py  main.py  models.py  schemas.py
apps/api/tests/: conftest.py  test_admin_community_lists.py  test_admin_data.py  test_admin_match_radar.py  test_admin_topic_delete.py  test_admin_voice.py  test_app_config.py  test_auth_verification.py  test_community_matching.py  test_conversation_mode.py  test_conversation_moderation.py  test_crush_exercise_llm.py  test_dashscope_asr.py  test_demo_mode.py  test_embedding.py  test_error_middleware.py  test_freeze_helpers.py  test_game_learning_packs.py  test_grammar_batch.py  test_learning_loop.py  test_llm_anthropic.py  test_llm_gemini.py  test_llm_provider_selection.py  test_membership_access.py  test_party_room.py  test_password_reset_code.py  test_pattern_mining.py  test_practice_grading.py  test_profile_personal.py  (+15 more)
(+441 files in other folders)
