[project]
name = "ainerspeak-api"
version = "0.1.0"
description = "AinerSpeak API-first backend"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "bcrypt<5",
  "cryptography>=43.0.0",
  "email-validator>=2.1.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "loguru>=0.7.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg2-binary>=2.9.9",
  "redis>=5.0.8",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "dashscope>=1.25.17",
  "websockets>=12.0",
  "openai>=1.40.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0",
  "apscheduler>=3.10.4",
  "reportlab>=4.3.0",
  "python-docx>=1.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
markers = [
  "enable_email_verification: run the test with email verification enabled",
]
